Добавил учет группы при регистрации списка студентов